Updated form field styles to ensure text alignment isn't messed up; Added an organization field and data to the Security > Register module;

--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -16,7 +16,6 @@
 }
 
 .form-centered {
-  text-align: center;
   width: 40%;
 }
 
